assets/css/main.scss
---
---

/* BEGIN RESET */
/* http://meyerweb.com/eric/tools/css/reset/ */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 1em;
	font: inherit;
	vertical-align: baseline;
}
a {
    text-decoration: none;
}
// HTML5 display-role reset for older browsers
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}
/* END RESET */

// COLORS
$color-black: #272727;
$color-white: #FFFFFF;
$color-grey: #EEEEEE;
$color-link: #DA2128;
$color-code: #00FF00;
$color-hire-white: #FEFEFE;
$color-hire-black: #272727;
$color-hire-green: #B6EFD4;
$color-hire-blue: #A0CCDA;
$color-hire-shadow: rgba(0, 0, 0, 0.2);

$color-offwhite: #e8e6e3;
$color-offblack: #181a1b;

// BREAKPOINTS
$br: 800px;

// Fonts
.ibm-plex-serif-regular {
  font-family: "IBM Plex Serif", serif;
  font-weight: 400;
  font-style: normal;
}

.ibm-plex-serif-bold {
  font-family: "IBM Plex Serif", serif;
  font-weight: 700;
  font-style: normal;
}

.ibm-plex-serif-regular-italic {
  font-family: "IBM Plex Serif", serif;
  font-weight: 400;
  font-style: italic;
}

body {
	color: $color-offwhite;
	background: $color-offblack;
	font-family: "Lucida Console", Monaco, monospace;
	font-size: 100%;
	font-weight: 400;
}
h1 {
	margin-bottom: 5px;
}
h2 {
  font-size: 1.4em;
  margin-bottom: 5px;
}
p {
	font-size: 1em;
	line-height: 150%;
}
a {
  color: $color-link;
  text-decoration: none;
  &:visited {
	color: $color-link;
	text-decoration: none;
  }
  &:hover {
	color: $color-link;
	text-decoration: none;
	padding-bottom: 1px;
	border-bottom: 1px solid $color-link;
  }
  &:active {
	color: $color-link;
	text-decoration: none;
  }
}
ul {
	list-style: none;
	li {
		padding: 5px;
		padding-left: 10px;
		line-height: 150%;
		@media screen and (max-width: $br) {
			padding: 10px 0 10px 0;
		}
	}
}
blockquote {
  color: $color-black;
  border-left: 4px solid $color-black;
  padding-left: 15px;
  font-size: 18px;
  letter-spacing: -1px;
  font-style: italic;
}

.wrapper {
	max-width: $br;
	margin: auto;
	padding: 60px 30px 60px 30px;
	@media screen and (max-width: $br) {
		padding: 20px;
	}
}


.header {
	display: flex;
	justify-content: space-between;
	align-items: baseline;
	padding-bottom: 50px;
	@media screen and (max-width: $br) {
		display: block;
	}
	h1 {
		font-size: 2em;
		margin-bottom: 0;
	}
	ul {
		margin-top: 10px;
		li {
			display: inline;
			padding: 0;
			padding-left: 5px;
		}
	}
}

.blog, .about {
	padding-bottom: 30px;
}

.post {
	padding-bottom: 30px;
	&__title {
		display: block;
		margin-top: 20px;
		margin-bottom: 6px;
		h1 {
			display: inline-block;
			font-size: 1.6em;
			font-weight: 700;
			padding-right: 10px;
			padding-bottom: 2px;
			text-decoration: none;
		}
	}
	&__date {
		p {
			font-size: 1em;
			font-style: italic;
		}
	}
	&__meta {
		p {

		}
	}
	&__content {
		padding-top: 40px;
		h1 {
			font-size: 1.4em;
			font-weight: 700;
			margin-top: 50px;
			margin-bottom: 10px;
		}
		h2 {
			font-size: 1.4em;
			font-weight: 700;
			margin-top: 25px;
			margin-bottom: 10px;
		}
		p {
			font-size: 1em;
			line-height: 150%;
			margin-bottom: 15px;
		}
		a {
			padding-bottom: 1px;
			border-bottom: 1px solid $color-link;
			&:hover {
				background-color: $color-grey;
				text-decoration: none;
			}
		}
		strong {
			font-weight: 700;
		}
		em {
			font-style: italic;
		}
		ul {
			font-size: 1em;
			list-style: circle;
			margin-left: 30px;
			margin-top: -10px;
			margin-bottom: 15px;
			li {
				padding: 5px;
				padding-left: 5px;
				@media screen and (max-width: $br) {
					padding: 10px 0 10px 0;
				}
			}
			@media screen and (max-width: $br) {
				margin-left: 10px;
			}
		}
		img {
			margin-top: 10px;
			margin-bottom: 10px;
			@media screen and (max-width: $br) {
				width: 100%;
				margin: auto;
			}
		}
		code {
			padding: 3px;
			font-size: 0.9em;
			border-radius: 3px;
			background: $color-grey;
		}
		.highlight {
			margin: 10px;
			margin-bottom: 15px;
			padding: 10px;
			line-height: 1.5;
			border-radius: 3px;
			background: $color-black;
			overflow: scroll;
			code {
				color: $color-code;
				background: none;
			}
		}
		.codebreak {
			margin: 15px;
			border: 0;
			border-bottom: 1px dashed $color-black;
		}
	}
}

.about {
	&__title {
		font-size: 1.6em;
		font-weight: 700;
		margin-top: 20px;
		margin-bottom: 10px;
	}
	&__content {
		margin-top: 20px;
		h1 {
			font-size: 1.2em;
			font-style: italic;
			margin-top: 30px;
			margin-bottom: 5px;
		}
		p {
			font-size: 1em;
			line-height: 150%;
			margin-bottom: 10px;
		}
	}
}

.transcript_section {
  margin-bottom: 2rem;
}

